# ai-agent-sdk-arena

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .releaserc.json  CHANGELOG.md  LINTING.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint-format.yml  release.yml  test.yml
.husky/: pre-commit
backend/mastra-ai/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/mastra-ai/src/: index.ts
backend/mastra-ai/src/agents/: coordinator.ts
backend/mastra-ai/src/mastra/: index.ts
backend/mastra-ai/src/mastra/agents/: index.ts
backend/openai-agents/: package.json
backend/openai-agents-py/: .env.example  README.md  pyproject.toml
backend/openai-agents-py/app/: main.py
backend/openai-agents-py/app/agents/: __init__.py  coordinator.py
backend/pydantic-ai/: .env.example  README.md  pyproject.toml
backend/pydantic-ai/app/: main.py
backend/pydantic-ai/app/agents/: accommodation.py  activities.py  coordinator.py  flight.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  animation.css  custom.css  datepicker-styles.css  datepicker.css  index.css  index.tsx  types.ts
frontend/src/components/: ChatBox.tsx  FrameworkSelector.tsx  ItineraryDisplay.tsx  ItineraryModal.tsx  TravelForm.tsx
frontend/src/components/ui/: badge.tsx  card.tsx
frontend/src/lib/: mastraClient.ts  utils.ts
(+1 files in other folders)
