[tool.poetry]
name = "travel-planner-pydantic"
version = "0.1.0"
description = "Travel planning system using Pydantic AI"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
